--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@supabase/supabase-js": "^2.39.0",
     "date-fns": "^3.0.6",
     "framer-motion": "^10.16.16",
+    "i18next": "^23.10.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.0.5",
     "react-markdown": "^9.1.0",
     "react-router-dom": "^6.20.1",
     "recharts": "^2.8.0",
